h1 fixed
was overlapping main, but not anymore

--- a/assets/style.css
+++ b/assets/style.css
@@ -701,7 +701,7 @@ canvas{
         h1{
             font-size: 50px;
             margin: 0 auto;
-            margin-top: 40%;
+            margin-top: 20%;
 
         }
 
